# AgenticX

./: .gitignore  AGENTS.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGING.md  README.md  README_ZN.md  TESTPYPI_README.md  build_and_publish.py  build_for_testpypi.py  install.sh  machi_cowork_evaluation.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-testpypi.txt  requirements.txt  setup.py
.cursor/plans/: 2025-03-26-mcp-desktop-settings-paths-autoconnect.plan.md  2025-03-26-subagent-session-isolation.plan.md  2026-03-04-redis-shared-state-backend.plan.md  2026-03-06-ironclaw-safety-layer.plan.md  2026-03-06-safety-layer-hardening.plan.md  2026-03-07-agx-ai-codegen.plan.md  2026-03-07-builtin-meta-skills.plan.md  2026-03-08-agenticx-studio-desktop.plan.md  2026-03-08-studio-context-injection.plan.md  2026-03-09-desktop-streaming-interrupt-fix_52be31bb.plan.md  2026-03-11-avatar-multi-session-architecture.plan.md  2026-03-17-lsp-code-intelligence.plan.md  2026-03-17-streaming-tool-display-fix.plan.md  2026-03-21-desktop-paste-image.plan.md  2026-03-21-forward-wake-avatar-session.plan.md  2026-03-21-group-inline-confirm-actions.plan.md  2026-03-21-minimax-2013-desktop-confirm.plan.md  2026-03-23-extension-ecosystem.plan.md  2026-03-23-memory-pipeline-fix.plan.md  2026-03-23-memory-ux-p0.plan.md  2026-03-23-sandbox-three-tier-mode.plan.md  2026-03-24-computer-use-internalization.plan.md  2026-03-24-desktop-remote-backend.plan.md  2026-03-24-dmg-self-contained-packaging.plan.md  2026-03-25-deerflow-2-codegen.plan.md  2026-03-26-default-browser-use-mcp.plan.md  2026-03-26-desktop-computer-use-setting.plan.md  2026-03-26-subagent-anti-futility-guardrails.plan.md  2026-03-27-fix-at-reference-file-path-resolution.plan.md  2026-03-27-liteparse-integration.plan.md  2026-03-27-machi-avatar-tool-permissions.plan.md  2026-03-27-mcp-call-error-surface.plan.md  2026-03-27-per-avatar-tool-auth.plan.md  2026-03-28-desktop-trinity-settings-exposure.plan.md  2026-03-28-liteparse-studio-wiring.plan.md  2026-03-29-hermes-agent-codegen.plan.md  (+282 more)
.github/: FUNDING.yml
agenticx/: __init__.py  _version.py  audit_report_20260407.md  prd.md
conclusions/: README.md  adk_internalization_summary.md  agno_vs_agenticx_knowledge_analysis.md  cli_conclusion.md  collaboration_module_conclusion.md  core_module_conclusion.md  embeddings_module_conclusion.md  embodiment_conclusion.md  evaluation_module_conclusion.md  llms_module_conclusion.md  memory_module_conclusion.md  observability_module_conclusion.md  protocols_module_conclusion.md  retrieval_module_conclusion.md  safety_module_conclusion.md  sessions_module_conclusion.md  storage_module_conclusion.md  tools_module_summary.md
deploy/: README.md  docker-compose.core.yml  docker-compose.minimal.yml  docker-compose.test.yml  docker-compose.yml  test_connectivity.py
desktop/: .gitignore  DESIGN.md  README.md  electron-builder.signing.yml  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
discussions/: 20250716_byTrae.md  20250724_byCopilot.md  20250724_bySuperClaude.md  20250728.md  20250802_Q&A.md  20250802_byClaude4.md  20250815_byGemini2.5pro.md  20250827_Q&A.md  20250924_difyTools_byDeepwiki.md
docs/: cc-bridge-protocol.md  changelog.md  cli.md  deploy_README.md  index.md  sandbox_README.md  server_README.md  tool_system_v2_README.md  tool_system_v2_planning.md
docs/api/: flow.md  (+3 more)
enterprise/: .env.local.example  .gitignore  CODEOWNERS  README.md  SECURITY.md  package.json  page@76baafc407c9ac091b5fd8e24d81e532.webm  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
examples/: README_HITL.md  README_embeddings.md  browser-use-mcp.md  chat_with_bailian.py  chat_with_kimi.py  collaboration_demo.py  env_template.txt  human_in_the_loop_example.py  llm_chat_example.py  m10_observability_demo.py  m15_retrieval_demo.py  m3_embeddings_demo.py  m6_agent_demo.py  m6_m7_comprehensive_demo.py  m6_m7_simple_demo.py  m6_multi_agent_demo.py  m7_m8_comprehensive_demo.py  m8_a2a_demo.py  m8_m9_simple_demo.py  m9_a2a_demo.py  m9_observability_demo.py  mcp_v2_demo.py  mem0_healthcare_example.py  simple_storage_demo.py  tool_system_demo.py  unified_storage_demo.py
exps/: http_to_mcp_bridge.py
packaging/: build_backend.sh  build_dmg.sh  build_windows_installer.ps1
research/: machi_cowork_evaluation.md
researches/: 12-factory-agents.md  MAS智能调度思考.md  README.md  WebAgent.md  a2a.md  adk-python.md  adkpython_agents_arch.md  agenticProtocals.md  agenticSeek.md  agentic_patterns_agents_arch.md  agenticsupernet.md  agents.md  agentscope.md  agentzero.md  agno.md  airweaves.md  autoagent.md  autogen.md  autogen_agents_arch.md  autogpt.md  camel_agents_arch.md  camelai.md  crewai.md  crewai_agents_arch.md  glean.md  humanintheloop.md  langgraph.md  magentic_ui.md  mcp.md  mem0.md  metagpt.md  metagpt_agents_arch.md  mirix-blog.md  mirix.md  openai-agents-python.md  opendeepresearch.md  openmanus.md  openmanus_agents_arch.md  owl.md  qwen_agents_arch.md  (+3 more)
scripts/: run_gaia_benchmark.py
tests/: README.md  env_template.txt  run_llm_tests.py  test_agent_loop.py  test_agent_runtime.py  test_agent_tools.py  test_backfill_message_timestamps.py  test_cc_bridge_http.py  test_cc_bridge_settings.py  test_cli_codegen_engine.py  test_cli_studio.py  test_compactor.py  test_completeness_truth.py  test_context_compiler.py  test_deepseek_interactive.py  test_enhanced_spawn.py  test_favorite_to_memory.py  test_gateway_wechat_ilink.py  test_hierarchical_memory.py  test_human_in_the_loop.py  test_kb_agent_tool.py  test_kb_routes.py  test_kb_runtime.py  test_kimi_provider_reasoning_and_stream.py  test_llm_provider_resolver.py  test_llms.py  test_loop_detector.py  test_m16_1_core_abstractions.py  test_m16_2_learning_engine.py  test_m9_observability.py  test_mcp_call_error_surface.py  test_mcp_config_entry_level_tolerance.py  test_mem0_memory.py  test_memory_graph_api.py  test_meta_agent_kb_policy.py  test_meta_tools.py  test_pending_queue.py  test_safety_sanitizer.py  test_session_manager_persistence.py  test_session_store.py  (+48 more)
(+1474 files in other folders)
