[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticx"
dynamic = ["version"]
description = "A unified, scalable, production-ready multi-agent application development framework"
authors = [
    {name = "Ziran Li", email = "bingzhenli@hotmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: System :: Distributed Computing",
]
keywords = ["ai", "agents", "multi-agent", "framework", "automation", "llm", "workflow", "orchestration"]

dependencies = [
    # ── 核心依赖（轻量，无 torch，秒装）──
    # 基础框架
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "PyYAML>=6.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",
    # 网络 / HTTP
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "websockets>=12.0",
    # Web 框架
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "typer>=0.9.0",
    # LLM 核心（固定最低版本，加速依赖解析）
    "openai>=1.50.0",
    "litellm>=1.50.0",
    "tiktoken>=0.7.0",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.24.0",
    # 核心工具库
    "docstring-parser>=0.11,<0.12",  # FunctionTool 需要解析 docstring
    # 通用工具
    "ujson>=5.8.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "chardet>=5.0.0",
    "psutil>=5.9.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
# ── 额外 LLM 提供者 ──
llm = [
    "anthropic>=0.40.0",
    "ollama>=0.3.0",
]
# ── 记忆系统（向量存储 / 持久化）──
memory = [
    "mem0ai>=0.1.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.10.0",
    "redis>=5.0.0",
    "pymilvus>=2.4.0",
    "numpy>=1.24.0",
]
# ── 文档处理 ──
# 注意：pytesseract 需要 tesseract (brew install tesseract)
#        pdf2image 需要 poppler (brew install poppler)
#        docx2txt 处理旧版 .doc 需要 antiword (brew install antiword)
document = [
    "PyMuPDF>=1.23.0",
    "pypdf>=3.15.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "docx2txt>=0.8",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]
# ── OCR（单独隔离，会拉入 torch ~2 GB）──
ocr = [
    "easyocr>=1.7.0",
]
# ── 知识图谱 / 图分析 ──
graph = [
    "networkx>=3.1",
    "neo4j>=5.12.0",
    "cdlib>=0.3.0",
    "wurlitzer>=3.0.0",
    "bayanpy>=0.0.6",
    "infomap>=2.7.0",
    "pyclustering>=0.10.0",
    "ASLPAw>=2.1.0",
    "leidenalg>=0.10.0",
]
# ── 数据分析 / 可视化 ──
data = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]
# ── 可观测性 / 监控 ──
monitoring = [
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
# ── 数据库后端 ──
database = [
    "psycopg2-binary>=2.9.0",
    "SQLAlchemy>=2.0.0",
    "cryptography>=41.0.0",
]
# ── MCP 协议 ──
mcp = [
    "mcp>=1.0.0",
]
# ── MQTT 协议 ──
mqtt = [
    "asyncio-mqtt>=0.16.0",
]
# ── 文本相似度 ──
text = [
    "python-Levenshtein>=0.21.0",
    "RapidFuzz>=3.0.0",
]
# ── 火山引擎 AgentKit ──
volcengine = [
    "agentkit-sdk-python>=0.1.0",
]
# ── 文档构建 ──
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.22.0",
    "mkdocs-autorefs>=0.4.0",
    "pydoc-markdown>=4.8.0",
    "docstring-parser>=0.11,<0.12",
]
# ── 开发工具 ──
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
# ── 全部功能（不含 dev/docs）──
all = [
    "agenticx[llm,memory,document,ocr,graph,data,monitoring,database,mcp,mqtt,text,volcengine]",
]

[project.urls]
Homepage = "https://github.com/DemonDamon/AgenticX"
Documentation = "https://agenticx.ai/docs"
Repository = "https://github.com/DemonDamon/AgenticX"
Issues = "https://github.com/DemonDamon/AgenticX/issues"
Discussions = "https://github.com/DemonDamon/AgenticX/discussions"

[project.scripts]
agenticx = "agenticx.cli.main:main"
agx = "agenticx.cli.main:main"

[tool.setuptools.dynamic]
version = {attr = "agenticx.__version__"}

[tool.setuptools.packages.find]
# 只包含 agenticx 包，排除所有其他目录
include = ["agenticx*"]
exclude = ["tests*", "examples*", "docs*", "thirdparty*", "researches*", "markmap*", "exps*", "assets*"]

[tool.setuptools.package-data]
agenticx = [
    "*.yaml", "*.yml", "*.json", "*.toml", "*.txt", "*.md",
    "**/*.yaml", "**/*.yml", "**/*.json", "**/*.toml", "**/*.txt", "**/*.md"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=agenticx",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["agenticx"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/examples/*",
    "*/benchmarks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]